overlays/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: caddy-ingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - path: /caddy
          pathType: Prefix
          backend:
            service:
              name: caddy-service
              port:
                name: https
